Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-138032

calqlatr: Example prints 'stale focus object [...], doing manual update' warnings

XMLWordPrintable

    • iOS/tvOS/watchOS
    • 44442d6cc (dev), 283f3b66c (6.10), 7b4061269 (6.9), b9aa6bfc4 (tqtc/lts-6.8)

      Launching the Calqlatr example with on iOS results in lots of runtime warnings:

      08:37:32: Running "/Users/kkoehne/dev/qt/dev/src/qtdoc/examples/demos/calqlatr/build/Qt_6_10_0_for_iOS/Debug-iphoneos/Calqlatr.app" on iPhone von Kai...
      QML debugging is enabled. Only use this in a safe environment.
      stale focus object 0x0 , doing manual update
      stale focus object 0x11a229d00 , doing manual update
      stale focus object 0x11a1a6d80 , doing manual update
      stale focus object 0x11a1a6e60 , doing manual update
      stale focus object 0x11a1a6920 , doing manual update
      stale focus object 0x11a1a6a00 , doing manual update
      stale focus object 0x11a1a6bc0 , doing manual update
      stale focus object 0x11a1a6920 , doing manual update
      stale focus object 0x11a1a6ca0 , doing manual update
      stale focus object 0x11a1a73a0 , doing manual update
      stale focus object 0x11a1a72c0 , doing manual update
      stale focus object 0x11a229d00 , doing manual update
      stale focus object 0x11a1a72c0 , doing manual update
      stale focus object 0x11a229d00 , doing manual update
      stale focus object 0x11a1a72c0 , doing manual update
      stale focus object 0x11a1a6680 , doing manual update
      [...] 

        For Gerrit Dashboard: QTBUG-138032
        # Subject Branch Project Status CR V

            vestbo Tor Arne Vestbø
            kkohne Kai Köhne
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes